examples/test/testpolicy19665.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19665
  namespace: namespace472
spec:
  podSelector:
    matchLabels:
      key34: value23
      key40: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value13
      podSelector:
        matchLabels:
          key21: value1
          key41: value15
          key34: value20
